ui_test/parser/fail/impl_viz.err
error: Visiblity attribute not expected here
  ┌─ $DIR/impl_viz.camp:1:1
  │
1 │ pub impl Foo {}
  │ ^^^

